工具的Shift信息显示基本完成 优化代码结构